--- a/소스코드/catharsis_announcement_server/src/main/resources/application.properties
+++ b/소스코드/catharsis_announcement_server/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port = 10003
