--- a/소스코드/catharsis_alert_server/src/main/resources/application.properties
+++ b/소스코드/catharsis_alert_server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://192.168.0.10:3306/catharsis?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/catharsis?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 
 spring.datasource.username=root
 
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port = 10004
