--- a/소스코드/catharsis_user_server/build.gradle
+++ b/소스코드/catharsis_user_server/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.json:json:20220924'
 }
 
 tasks.named('test') {
