--- a/소스코드/catharsis_user_server/src/main/resources/application.properties
+++ b/소스코드/catharsis_user_server/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port = 10001
+
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
