디버깅 및 수정

--- a/소스코드/catharsis_push_server/build.gradle
+++ b/소스코드/catharsis_push_server/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.turo:pushy:0.13.10'
+	implementation 'org.json:json:20220924'
 }
 
 tasks.named('test') {
